--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-parse": "^10.0.1",
-    "unified": "^10.1.2"
+    "unified": "^10.1.2",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "18.11.5",
