--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.1",
     "contentful": "^9.2.9",
     "micromark": "^3.1.0",
     "next": "12.3.1",
