--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-react-renderer": "^15.12.1",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "contentful": "^9.2.9",
+    "jotai": "^1.10.0",
     "micromark": "^3.1.0",
     "next": "12.3.1",
     "react": "18.2.0",
