--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-toast": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.0.2",
     "contentful": "^9.2.9",
     "jotai": "^1.10.0",
     "micromark": "^3.1.0",
