--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.11.5",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "typescript": "4.8.4"
   }
 }
