--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.12.1",
@@ -40,6 +41,7 @@
     "eslint-config-next": "12.3.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "zod-fixture": "^1.0.2"
   }
 }
