--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "typescript": "4.8.4",
